modified the ansible-navigator.yml to add pull policy

--- a/Ansible/CreateAnsibleTemplateDir/ansible-navigator.yml
+++ b/Ansible/CreateAnsibleTemplateDir/ansible-navigator.yml
@@ -2,4 +2,6 @@
 ansible-navigator:
   execution-environment:
     enabled: false
+    pull-ploicy: missing
+    image: registry.redhat.io/ansible-automation-platform-22/ee-supported-rhel8:latest
   mode: stdout
